Added outreach tracker

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,13 @@
 .hidden {
   display: none;
 }
+
+.client {
+  background-image: linear-gradient(120deg, #a6c0fe 0%, #1eb6b6 100%);
+  border: 2px solid red;
+}
+
+h1 {
+  text-transform: capitalize;
+}
 /*# sourceMappingURL=style.css.map */
