--- a/styles/style.scss
+++ b/styles/style.scss
@@ -3,3 +3,13 @@
 .hidden{
     display: none;
 }
+
+.client{
+    background-image: linear-gradient(120deg, #a6c0fe 0%, #1eb6b6 100%);
+    border: 2px solid red;
+}
+
+h1{
+    // color: red;
+    text-transform: capitalize;
+}
