--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,4 +4,8 @@
   display: flex;
   gap: 30px;
 }
+
+.profile-heading .company-heading {
+  color: #949494;
+}
 /*# sourceMappingURL=style.css.map */
