--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,11 +1,11 @@
 
-#customer-section{
-    display: flex;
-    gap: 30px;
-}
-
 .profile-heading{
     .company-heading{
         color: rgb(148, 148, 148);
     }
+}
+
+.client-profile{
+    background-color: rgba(241, 241, 241, 0.288);
+    border-radius: 10px;
 }
